# RS2_Robloc

./: .gitignore
Universal_Robots_Client_Library/: .clang-tidy
Universal_Robots_ROS2_Driver/ur_moveit_config/config/: kinematics.yaml
Universal_Robots_ROS2_Driver/ur_robot_driver/config/: ur_controllers.yaml
cube_detector/: package.xml  setup.cfg  setup.py
cube_detector/cube_detector/: live_detect_node.py
cube_detector_msgs/: CMakeLists.txt  package.xml
cube_detector_msgs/msg/: CubeDetection.msg  CubeDetectionArray.msg
onrobot_driver/: .gitmodules  CMakeLists.txt  README.md  package.xml  required.repos  rg_hardware_interface.xml
onrobot_driver/config/: rg_controllers.yaml
onrobot_driver/include/onrobot_driver/: IModbusConnection.hpp  RG.hpp  SerialConnectionWrapper.hpp  TCPConnectionWrapper.hpp  rg_hardware_interface.hpp
onrobot_driver/include/onrobot_driver/Modbus/docs/html/: dir_f8aebf652183de33714d471cbd098255.html  namespacemembers_func.html
onrobot_driver/launch/: onrobot_control.launch.py
onrobot_driver/src/: RG.cpp  rg_hardware_interface.cpp
ur3e_moveit_control/: CMakeLists.txt  package.xml
ur3e_moveit_control/.claude/: settings.local.json
ur3e_moveit_control/config/: kinematics.yaml
ur3e_moveit_control/launch/: move_robot.launch.py
ur3e_moveit_control/scripts/: camera_to_robot_goals.py  eef_pose_publisher.py  fake_finger_width_state.py
ur3e_moveit_control/src/: move_robot.cpp  pick_place_mtc.cpp  test_accuracy.cpp  test_pick_place.cpp
ur3e_rqt_ui/: package.xml  plugin.xml  setup.cfg  setup.py
ur3e_rqt_ui/test/: interactive_test.py  test_connection_status.py  test_estop.py  test_pose_display.py
ur3e_rqt_ui/ur3e_rqt_ui/: plugin.py
ur_onrobot/ur_onrobot_control/launch/: start_robot.launch.py
